fixed the z-index

--- a/styles/about.css
+++ b/styles/about.css
@@ -3,7 +3,6 @@
 .about {
   width: 100%;
   padding: 20px 0px;
-  z-index: 10;
 }
 
 .about-wrapper {
