--- a/styles/footwear.css
+++ b/styles/footwear.css
@@ -5,7 +5,6 @@
   padding-top: 40px;
   padding-bottom: 40px;
   cursor: pointer;
-  z-index: 10;
 }
 
 .footwear-wrapper {
