--- a/styles/gowns.css
+++ b/styles/gowns.css
@@ -3,7 +3,6 @@
   width: 100%;
   padding-top: 40px;
   padding-bottom: 40px;
-  z-index: 10;
 }
 
 .gowns-wrapper {
