--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,5 +1,4 @@
 .hero {
-  z-index: 10;
   width: 100%;
   height: 100vh;
   background-image: url('../assets/images/hero.png');
@@ -203,4 +202,3 @@
   color: var(--textColor);
   padding-bottom: 20px;
 }
-
