--- a/styles/jewelry.css
+++ b/styles/jewelry.css
@@ -4,7 +4,6 @@
   background-color: var(--accent2);
   padding-top: 40px;
   padding-bottom: 40px;
-  z-index: 10;
 }
 
 .jewellery-wrapper {
